# cmd-a

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.docling  Dockerfile.frontend  Dockerfile.main  Dockerfile.skaffold.frontend  Makefile  README.md  pyproject.toml  skaffold.yaml
.github/workflows/: deploy-backend.yaml  deploy-docling.yaml  deploy-frontend.yaml
alembic/: env.py  make-migrations.sh  watch_migrations.py
alembic/versions/: d587be5c6d9d_.py
app/: run.sh  settings.py
app/clients/: graph_client.py  k8s_client.py  mongodb_client.py  redis_client.py  vectordb_client.py
app/db/: container.py  factory.py  security.py
app/db/models/: __init__.py  auth.py  base.py  chat_models.py  choices.py  integration.py  k8s.py
app/processors/: constants.py  k8s_deployment.py  utils.py
app/processors/base/: component.py  processor.py  scheduler.py  (+2 more)
app/rag/: rag_agent.py  types.py
app/rest_api/: auth.py  chat.py  chat_models.py  integrations.py  k8s.py  utils.py
app/server/: main.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: config.json
frontend/src/: App.css  App.tsx  api.tsx  globals.d.ts  main.tsx  types.ts  utils.tsx
manifests/: README.md
manifests/dev/: application.yaml  config_map.yaml  frontend.yaml  mongodb-express.yaml  mongodb-pvc.yaml  mongodb.yaml  neo4j-pvc.yaml  neo4j.yaml  pinecone-secrets.yaml  postgres-pvc.yaml  postgres.yaml  redis.yaml
manifests/prod/: application.yaml  cluster_role.yaml  config_map.yaml  frontend.yaml  graphdb-secrets.yaml  ingress.yaml  mongodb-secrets.yaml  postgres-pvc.yaml  token-secret.yaml
(+78 files in other folders)
